2024-03-10  Karl Berry  <karl@tug.org>

	* TL'24 release.

2024-02-24  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* xetex.web, xetex.ch:
	Accept file names with characters of over-BMP.
	* wcfname.test:
	Add tests for file names with characters of over-BMP.
	https://tug.org/pipermail/tex-live/2023-November/049665.html
	https://tug.org/pipermail/tex-live/2023-November/049685.html
	https://github.com/texjporg/tex-jp-build/issues/164

2024-02-04  Karl Berry  <karl@tug.org>

        * NEWS,
        * xetex_version.h,
        * xetex.web (xetex_revision, xetex_version_string):
        version 0.999996 for TL24.

2023-12-24  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* wcfname.test:
	Avoid errors on parallel test processing.

2023-11-25  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* wcfname.test: Add tests for --recorder and *.fls.

2023-08-20  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* {wcfname,xetex-bug73,xetex-filedump,xetex}.test:
	Make easier to test on Windows.

2023-03-29  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* wcfname.test:
	Sync with update of fn-generate.perl.

2023-03-09  Karl Berry  <karl@tug.org>

	* TL'23 release.

2023-02-21  Phelype Oleinik  <phelype.oleinik@latex-project.org>

	* xetex.web: reduce memory usage for \special shipout,
	a la HH/luatex.

2023-02-19  Martin Hosken  <martin_hosken@sil.org>

	* xetex.web (Insert glue for |split_top_skip|...),
	(Initialize the current page, insert the \.{\\topskip} glue...)
	handle XeTeX_upwards case.
	
	When \XeTeXupwards mode is active (non-zero) line spacing
	calculations are inverted, that is the lineskip is
	calculated as \baselineskip - height(line-1) - depth(line),
	instead of the normal \baselineskip - depth(line-1) - height(line).
	This works fine.
	But the lineskip calculation at the top of a page or vsplit needs
	also to be inverted (\topskip, \splittopskip); that's what this
	change does.
	https://github.com/TeX-Live/texlive-source/pull/58

2023-02-14  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>
