@@ -206,9 +206,11 @@ EXTRA_DIST += \
 xetex_tests = \
 	xetexdir/xetex-filedump.test \
 	xetexdir/xetex-bug73.test \
+	xetexdir/xetex-ctrlsym.test \
 	xetexdir/xetex.test \
 	xetexdir/wcfname.test
-xetexdir/xetex-filedump.log xetexdir/xetex-bug73.log xetexdir/xetex.log \
+xetexdir/xetex-filedump.log xetexdir/xetex-bug73.log \
+  xetexdir/xetex-ctrlsym.log xetexdir/xetex.log \
   xetexdir/wcfname.log: xetex$(EXEEXT)
 
 EXTRA_DIST += $(xetex_tests)
@@ -224,6 +226,10 @@ DISTCLEANFILES += bug73.fmt bug73.log bug73.out bug73.tex
 ## xetex-filedump.test
 EXTRA_DIST += xetexdir/tests/filedump.log xetexdir/tests/filedump.tex
 DISTCLEANFILES += filedump.log filedump.out filedump.tex
+
+## xetex-ctrlsym.test
+EXTRA_DIST += xetexdir/tests/ctrlsym.log xetexdir/tests/ctrlsym.tex
+DISTCLEANFILES += xe-ctrlsym.fmt xe-ctrlsym.log xe-ctrlsym.out xe-ctrlsym.tex
 
 ## wcfname.test
 DISTCLEANFILES += xetests/fn*.*
