@@ -1,0 +1,28 @@
+#! /bin/sh -vx
+# Copyright 2024 Japanese TeX Development Community <issue@texjp.org>
+# You may freely use, modify and/or distribute this file.
+
+BinDir=${BinDir:-.}
+ExeExt=${ExeExt:-}
+_xetex=$BinDir/xetex$ExeExt
+
+LC_ALL=C; export LC_ALL;  LANGUAGE=C; export LANGUAGE
+
+TEXMFCNF=$srcdir/../kpathsea;export TEXMFCNF
+TEXINPUTS=".;$srcdir/tests"; export TEXINPUTS
+TEXFORMATS=.; export TEXFORMATS
+
+# get same filename in log
+rm -f xe-ctrlsym.tex
+$LN_S $srcdir/xetexdir/tests/ctrlsym.tex ./xe-ctrlsym.tex
+
+#exit 77
+
+$_xetex -ini -etex xe-ctrlsym || exit 1
+
+$_xetex -etex -fmt=xe-ctrlsym xe-ctrlsym || exit 2
+
+sed 1d xe-ctrlsym.log >xe-ctrlsym.out
+
+diff $srcdir/xetexdir/tests/ctrlsym.log xe-ctrlsym.out || exit 3
+
