@@ -111,6 +111,14 @@ if translate_filename then read_tcx_file;
 @!bound_default:integer; {temporary for setup}
 @z
 
+@x [5.??] type of trick_buf[]
+@!trick_buf:array[0..ssup_error_line] of ASCII_code; {circular buffer for
+  pseudoprinting}
+@y
+@!trick_buf:array[0..ssup_error_line] of UnicodeScalar; {circular buffer for
+  pseudoprinting}
+@z
+
 @x [5.61] l.1556 - Print rest of banner, eliminate misleading `(no format preloaded)'.
 if translate_filename then begin
   wterm(' (');
